Rearrange sass files, fix chatbox overflow.

--- a/public/css/src/_chat.scss
+++ b/public/css/src/_chat.scss
@@ -25,7 +25,6 @@
 		textarea {
 			margin: 10px 0;
 		}
-
 	}
 }
 
@@ -37,7 +36,7 @@
 
 	header {
 		background-color: #9CFFBA;
-		height: 7%;
+		height: 40px;
 		padding: 5px;
 		display: flex;
 		align-items: center;
@@ -48,218 +47,120 @@
 			font-weight: bold;
 		}
 	}
-
-	.messages {
-		height: 83%;
-		overflow-y: scroll;
-		background-color: #f2f2f2;
-
-		.message{
-			display: flex;
-			width: 90%;
-			margin: 10px 0;
-			margin-left: 5%;
-
-			.user-image{
-				margin-right: 10px;
-				border-radius: 10%;
-				max-height: $user-img-height;
-			}
-		}
-
-		.message-container {
-			margin-bottom: 10px;
-			padding: 0.5em 1em;
-			padding-right: 0.5em;
-			background-color: #fff;
-			border-radius: 3px;
-			line-height: 1em;
-			font-size: $message-font-size;
-			position: relative;
-			box-shadow: 0 3px #ccc;
-			width: 100%;
-
-			.message-timestamp{
-				color: #7a7a7a;
-				font-size: $small-font-size;
-			}
-
-			.main-message{
-				display: flex;
-
-				.message-content{
-					@include word-wrap();
-					
-					.katex{
-						line-height: 1.6em;
-						font-size: $latex-font-size;
-						display: inline-block;
-						margin: 5px 0;
-					}
-				}
-
-				.edit-message-btn {
-					background-color: #e5e5e5;
-					padding: 5px;
-					min-width: 50px;
-					border-radius: 3px;
-					text-align: center;
-					transition: all ease 0.2s;
-					cursor: pointer;
-					margin-left: auto;
-					max-height: 30px;
-				}
-
-				.edit-message-btn:hover {
-					background-color: #444;
-
-					a {
-						color: #fff;
-					}
-				}
-
-				.edit-message-btn a {
-					color: #7a7a7a;
-					text-decoration: none;
-					font-weight: bold;
-				}
-
-			}
-
-
-		}
-
-		.message:nth-child(even) {
-			width: 85%;
-		}
-
-		.message-container:after {
-			top: 50px;
-			right: 100%;
-			border: solid transparent;
-			content: " ";
-			height: 0;
-			width: 0;
-			position: absolute;
-			pointer-events: none;
-			border-color: rgba(255, 255, 255, 0);
-			border-right-color: #fff;
-			border-width: 0 15px 15px 0;
-			margin-top: -15px;
-		}
-
-	}
-
-	.messages-expanded {
-		@extend .messages;
-		height: 90%;
-	}
-
-	.message-form {
-		position: relative;
-		display: flex;
-		align-items: flex-end;
-		min-height: 10%;
-        max-height: 20%;
-		padding: 0 5px;
-		background-color: #f2f2f2;
-		box-shadow: 0 20px 20px -20px rgba(0,0,0,0.4);
-        @include word_wrap();
-
-		.smilies-btn {
-			font-size: 4em;
-			text-align: center;
-			cursor: pointer;
-			margin-bottom: 10px;
-		}
-
-		.message-actions {
-			width: 10%;
-			margin: 10px;
-		}
-
-		div {
-			margin-left: 20px;
-			margin-bottom: 10px;
-		}
-
-		.btn-secondary {
-			margin-left: 10px;
-			align-self: flex-start;
-			margin-top: 10px;
-		}
-	}
 }
 
-.btn-primary {
-	background-color: #197DFF;
-	border: none;
-	border-radius: 3px;
-	color: #fff;
-	font-size: $message-font-size;
-	border-bottom: 3px solid #0E468F;
-	transition: 0.5s ease background-color;
-	cursor: pointer;
-
-	&.disabled {
-		opacity: 0.3;
-		cursor: default;
-	}
+.message{
+	display: flex;
+	width: 90%;
+	margin: 10px 0;
+	margin-left: 5%;
 }
 
-.btn-primary.large {
-	width: 100%;
-	height: 35px;
+.user-image{
+	margin-right: 10px;
+	border-radius: 10%;
+	max-height: $user-img-height;
 }
 
-
-.btn-primary:hover {
-	background-color: #3C8FFA;
+.messages {
+	height: 83%;
+	overflow-y: scroll;
+	background-color: #f2f2f2;
 }
 
-.btn-primary:active {
+.message-timestamp{
+	color: #7a7a7a;
+	font-size: $small-font-size;
+}
+
+.message-container {
+	margin-bottom: 10px;
+	padding: 0.5em 1em;
+	padding-right: 0.5em;
 	background-color: #fff;
+	border-radius: 3px;
+	line-height: 1em;
+	font-size: $message-font-size;
+	position: relative;
+	box-shadow: 0 3px #ccc;
+	width: 100%;
+}
+
+.main-message{
+    display: flex;
+}
+
+.message-content{
+	@include word-wrap();
+    margin-right: 5px;
+}
+
+.katex{
+	line-height: 1.6em;
+	font-size: $latex-font-size;
+	display: inline-block;
+	margin: 5px 0;
+}
+
+.message:nth-child(even) {
+    width: 85%;
+}
+
+.message-container:after {
+	top: 50px;
+	right: 100%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+	border-color: rgba(255, 255, 255, 0);
+	border-right-color: #fff;
+	border-width: 0 15px 15px 0;
+	margin-top: -15px;
+}
+
+.messages-expanded {
+	@extend .messages;
+	height: 90%;
+}
+
+.message-form {
+	position: relative;
+	display: flex;
+	align-items: flex-end;
+	padding: 0 5px;
+	background-color: #f2f2f2;
+	box-shadow: 0 20px 20px -20px rgba(0,0,0,0.4);
+}
+
+.message-actions {
+	width: 10%;
+	margin: 10px;
 }
 
 .message-entry {
+    @include word_wrap();
 	width: 90%;
-	max-width: 100%;
+    min-height: 30px;
+    max-height: 90px;
 	display: block;
 	font-size: inherit;
 	border: none;
 	padding: 10px;
-	resize: none;
 	outline: none;
-	margin: 0 20px;
+	margin: 10px 20px;
 	background-color: #e5e5e5;
 	font-family: $font;
 	font-size: $input-font-size;
 	border-radius: 3px;
+    overflow: auto;
 }
 
 .message-entry:focus{
 	background-color: #fff;
 }
-
-.btn-primary.small {
-	width: 25%;
-	height: 40px;
-}
-
-.btn-secondary {
-	background-color: #fff;
-	border: 3px solid rgba(0,0,0,0.2);
-	border-radius: 3px;
-	padding: 7px 10px;
-	cursor: pointer;
-}
-
-//Don't think this feature is really necessary.
-// .chat-footer {
-// 	background-color: #e5e5e5;
-// 	padding: 2px 5px;
-// 	height: 7%;
-// }
 
 // these only work in webkit browsers, unfortunately there seems to be no way to achieve the same effect
 // in gecko, until Mozilla does something about that (which they haven't for several years...)
